checkout page done

--- a/src/pages/Shared/Header/Login/Login.css
+++ b/src/pages/Shared/Header/Login/Login.css
@@ -1,16 +1,16 @@
-.bg-color{
- background: #ecf0f3;
+.bg-color {
+  background: #ecf0f3;
 }
 
-label{
-   margin-left: 16px;
-   margin-bottom: 10px;
-   color: gray;
+label {
+  margin-left: 16px;
+  margin-bottom: 10px;
+  color: gray;
 }
 
-.form-container input{
+.form-container input:not([type="checkbox"]) {
   width: 300px;
-  border: none ;
+  border: none;
   background: #ecf0f3;
   padding: 10px;
   padding-left: 20px;
@@ -19,43 +19,37 @@ label{
   border-radius: 100px;
   box-shadow: inset 6px 6px 6px #cbced1, inset -6px -6px 6px white;
 }
-/* .form-container button{
-  background-color: #4F52FF;
-  width: 100%;
-  border-radius: 8px;
-} */
-
-.login-btn{
-  background-color: #4F52FF;
+.submit-btn {
+  background-color: #4f52ff;
   width: 100%;
   border-radius: 8px;
 }
 
-.or-style{
+.or-style {
   height: 1px;
   background-color: gray;
 }
-.pointer img{
+.pointer img {
   cursor: pointer;
 }
-.login{
+.login {
   justify-content: end;
   display: flex;
   color: #4f52ffea;
   align-items: flex-end;
 }
-.reset-password{
+.reset-password {
   color: #4f52ffea;
   cursor: pointer;
   text-decoration: underline;
 }
 
-@media (max-width: 576px) { 
-    .img-container img{
-        width: 300px;
-        margin: auto;
-        text-align: center;
-        justify-content: center;
-        display: flex;
-    }
- }
+@media (max-width: 576px) {
+  .img-container img {
+    width: 300px;
+    margin: auto;
+    text-align: center;
+    justify-content: center;
+    display: flex;
+  }
+}
