--- a/src/pages/Home/CheckOut/CheckOut.css
+++ b/src/pages/Home/CheckOut/CheckOut.css
@@ -10,7 +10,7 @@
 .checkout-form form{
   padding:20px;
   width:700px;
-  /* background: #ecf0f3; */
+  background: #c8cbce50;
   box-shadow: 0 5px 10px rgba(0,0,0,.1);
 }
 
